# unicity-astrid.github.io

./: .gitignore  DESIGN.md  README.md
.github/workflows/: ci.yml  pages.yml
kernel-smoke/: Cargo.toml
kernel-smoke/src/: lib.rs
kernel-smoke/tests/: boot.rs
kernel-web/: Cargo.toml
kernel-web/src/: lib.rs
kernel-web/tests/: bridge.rs
notes/: kernel-core-portability.md  v2-roadmap-designs.md
site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
site/public/: CNAME  base-install.sh  install.sh  oracle-install.sh
site/public/showcase/: prompt-builder.component.core3.wasm
site/scripts/: test-install-orchestration.sh  test-release-contract.mjs
site/src/: content.config.ts  env.d.ts  qrcode.d.ts
site/src/components/: AgentMark.astro  AgentPill.astro  CapsuleRing.astro  Hero.astro  Hud.astro  SceneAgent.astro  SceneAudiences.astro  SceneBooks.astro  SceneBring.astro  SceneCapability.astro  SceneCapsules.astro  SceneDumbKernel.astro  SceneGrow.astro  SceneHome.astro  SceneLayers.astro  SceneProof.astro  SceneStart.astro  SceneThesis.astro
site/src/content/developers/: architecture.md  build-package.md  capsule-anatomy.md  capsules.md  ci.md  cli.md  get-started.md  http-admin.md  http-auth.md  http-streams.md  http.md  integrations.md  ipc.md  manifest.md  migration.md  overview.md  releases.md  sdk-and-wit.md  sign-and-publish.md  state-and-secrets.md  test-and-debug.md  workspace.md
site/src/layouts/: Base.astro  Docs.astro
site/src/lib/: docs-nav.ts  release.ts
site/src/pages/: 404.astro  agent-index.json.ts  build.astro  how-it-works.astro  index.astro  link.astro  llms-full.txt.ts  llms.txt.ts  playground.astro  registry.astro  siri.astro  start.astro
site/src/pages/developers/: [...slug].astro  index.astro
site/src/scripts/: book-lens.ts  brand.ts  burst-gl.ts  burst-link.ts  bus-canvas.ts  fleet-host.ts  guest-runtime.ts  guide-lens.ts  kernel.ts  llm-connect.ts  local-agent.ts  nav-context.ts  phone-link.ts  rail.ts  scenes.ts  section-capsules.ts  showcase-host.ts  site-tally.ts
site/src/showcase/: prompt-builder.component.d.ts
site/src/showcase/interfaces/: astrid-guest-lifecycle.d.ts  astrid-kv-host.d.ts
site/src/styles/: base.css  brand-unicity.css  tokens.css
site/tests/: phone-link.test.ts
spike/: README.md  host-stubs.mjs  index.html  package-lock.json  package.json  prompt-builder.component.wasm  prompt-builder.wasm  run-node.mjs
spike/transpiled/: prompt-builder.component.core.wasm  prompt-builder.component.core2.wasm  prompt-builder.component.js
spike/transpiled/interfaces/: astrid-ipc-host.d.ts  astrid-sys-host.d.ts
