[package]
name = "kernel-web"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
astrid-kernel = { path = "../../core/crates/astrid-kernel" }
astrid-storage = { path = "../../core/crates/astrid-storage" }
astrid-audit = { path = "../../core/crates/astrid-audit" }
astrid-capabilities = { path = "../../core/crates/astrid-capabilities" }
astrid-crypto = { path = "../../core/crates/astrid-crypto" }
astrid-core = { path = "../../core/crates/astrid-core" }
astrid-capsule-types = { path = "../../core/crates/astrid-capsule-types" }
astrid-events = { path = "../../core/crates/astrid-events" }
astrid-runtime = { path = "../../core/crates/astrid-runtime" }

# Activate the browser RNG backend on every getrandom major present in the
# kernel's wasm dependency tree (0.4 via astrid-crypto/uuid, 0.3 via
# surrealkv's ahash). The matching --cfg getrandom_backend="wasm_js" lives in
# .cargo/config.toml. Copied verbatim from kernel-smoke.
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"

# `FutureExt::now_or_never` for the synchronous jco host-import KV shims: the
# in-memory `MemoryKvStore` futures have no await points and resolve on the
# first poll on this single-threaded target. default-features off keeps the
# no_std combinator surface only (no executor/std). Matches core's 0.3 pin.
futures = { version = "0.3", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
